--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,26 @@ header{
 .post-photo{
 
     display: block;
+
+}
+
+.finale{
+    color: gray;
+}
+
+.contain{
+    width: 300px;
+    height: 200px;
+    background-image: url(../img/monitor.jpg);
+    background-size: cover;
+    font-size: 1.5em;
+    color: white;
+}
+.contain1{
+    width: 300px;
+    height: 200px;
+    background-image: url(../img/graph.jpg);
+    background-size: cover;
+    font-size: 1.5em;
+    color: white;
 }
